--- a/react-app/src/components/UserLanding/UserLandingSideBar.css
+++ b/react-app/src/components/UserLanding/UserLandingSideBar.css
@@ -6,14 +6,21 @@
 .UserLanding-sidebar {
 	width: 240px;
 	height: 100vh;
-	background-color: #303136;
 	display: flex;
 	flex-direction: column;
 	user-select: none;
 }
 
+#dark.UserLanding-sidebar {
+	background-color: #303136;
+}
+
 #light.UserLanding-sidebar {
 	background-color: #f2f3f5;
+}
+
+#purple.UserLanding-sidebar {
+	background-color: #7f73ba;
 }
 
 .UserLanding-sidebar-header {
@@ -25,13 +32,20 @@
 	padding: 12px 16px;
 	box-sizing: border-box;
 	border-bottom: 1px;
-	color: #ffffff;
 	box-shadow: 0 1px 0 hsl(240 11.1% 1.8% / 0.2),
 		0 1.5px 0 hsl(240 7.7% 2.5%/0.05), 0 2px 0 hsl(240 11.1% 1.8%/0.05);
 }
 
+#dark.UserLanding-sidebar-header {
+	color: #ffffff;
+}
+
 #light.UserLanding-sidebar-header {
-	color: black;
+	color: #060607;
+}
+
+#purple.UserLanding-sidebar-header {
+	color: #393065;
 }
 
 .UserLanding-sidebar-channel-content {
@@ -155,7 +169,6 @@ a.UserLanding-sidebar-channel-name {
 	bottom: 0;
 	width: 240px;
 	height: 52px;
-	background-color: #2a2b2f;
 	display: flex;
 	flex-direction: row;
 	align-items: center;
@@ -180,8 +193,16 @@ a.UserLanding-sidebar-channel-name {
 	border-radius: 3px;
 }
 
+#dark.UserLanding-sidebar-channel-user-info {
+	background-color: #2a2b2f;
+}
+
 #light.UserLanding-sidebar-channel-user-info {
 	background-color: #ebedef;
+}
+
+#purple.UserLanding-sidebar-channel-user-info {
+	background-color: #675c9f;
 }
 
 .UserLanding-sidebar-channel-user-container {
