--- a/react-app/src/components/ServerMembers/MemberPage.css
+++ b/react-app/src/components/ServerMembers/MemberPage.css
@@ -13,6 +13,10 @@
 	background: #e9eaed;
 }
 
+#purple.member-card {
+	background: #dfdcee;
+}
+
 #card-header {
 	margin: 0;
 	border-radius: 10px 10px 0 0;
@@ -35,6 +39,10 @@
 
 #light.card-img {
 	border: 5px solid #e9eaed;
+}
+
+#purple.card-img {
+	border: 5px solid #dfdcee;
 }
 
 .card-content {
@@ -64,6 +72,10 @@
     background-color: #ffffff;
 }
 
+#purple.card-member-info {
+    background-color: #ffffff;
+}
+
 .member-header {
     display: flex;
     flex-direction: row;
@@ -80,6 +92,18 @@
     font-size: 12px;
     color: white;
     background-color: green;
+    margin-bottom: 12px;
+    margin-right: 2px;
+}
+
+#purple.add-friend-button {
+    border: none;
+    border-radius: 3px;
+    height: 30px;
+    width: 110px;
+    font-size: 12px;
+    color: white;
+    background-color: #4c4087;
     margin-bottom: 12px;
     margin-right: 2px;
 }
@@ -122,6 +146,11 @@
     border-bottom: 1px solid #e7e8eb;
 }
 
+#purple.member-nickName-div {
+    color: #5F50A9;
+    border-bottom: 1px solid #e7e8eb;
+}
+
 .member-nickname-div-container {
     width: 100%;
 }
@@ -157,6 +186,10 @@
     color: #060607;
 }
 
+#purple.member-nickname {
+    color: #5F50A9;
+}
+
 .member-since-section{
     padding: 5px 0;
 }
@@ -179,6 +212,10 @@
 
 #light.member-h4 {
     color: #060607;
+}
+
+#purple.member-h4 {
+    color: #5F50A9;
 }
 
 .member-role-div {
@@ -249,6 +286,10 @@
     background-color: #e9eaed;
 }
 
+#purple.member-role-container {
+    background-color: #bfb9dd;
+}
+
 .member-role-circle {
     width: 12px;
     height: 12px;
@@ -282,6 +323,12 @@
     color: #313338;
 }
 
+#purple.member-role {
+    color: #fff;
+}
+
+/* 7f73ba */
+
 .role-edit-button {
     border-radius: 4px;
     padding: 2px 8px;
@@ -301,6 +348,11 @@
     background-color: #e9eaed;
 }
 
+#purple.role-edit-button {
+    color: #fff;
+    background-color: #bfb9dd;
+}
+
 .role-edit-button:hover {
 	background-color: #292b2f;
 }
@@ -315,6 +367,10 @@
 
 #light.card-text {
 	color: #313338;
+}
+
+#purple.card-text {
+	color: #9F96CB;
 }
 
 .leave-server-div {
