--- a/react-app/src/components/ServerMembers/ServerMembers.css
+++ b/react-app/src/components/ServerMembers/ServerMembers.css
@@ -26,6 +26,9 @@
 	background-color: #ffffff;
 }
 
+#purple.ServerMember-sidebar {
+	background-color: #7f73ba;
+}
 
 .ServerMember-content {
 	margin-top: 1px;
@@ -110,6 +113,11 @@
 	color: #5c5e66;
 }
 
+#purple.total-members {
+	color: #fff;
+}
+
+
 /* h2 {
 	width: 230px;
 	padding-left: 5px;
@@ -162,6 +170,11 @@
 	color: #49c193;
 }
 
+#purple #owner.individual-person button,
+#purple #admin.individual-person button {
+	color: rgb(42, 129, 95);
+}
+
 #dark #member.individual-person button {
 	color: rgb(196, 122, 228);
 }
@@ -170,11 +183,19 @@
 	color: #9b59b6;
 }
 
+#purple #member.individual-person button {
+	color: #bfb9dd;
+}
+
 #dark #pending.individual-person button {
 	color: white;
 }
 
 #light #pending.individual-person button {
+	color: #5c5e66;
+}
+
+#purple #pending.individual-person button {
 	color: #5c5e66;
 }
 
@@ -237,6 +258,12 @@
 	cursor: pointer;
 }
 
+#purple .individual-person:hover {
+	background-color: #4c4087;
+	filter: brightness(1);
+	cursor: pointer;
+}
+
 .member-img {
 	border-radius: 50%;
 	height: 35px;
@@ -279,6 +306,10 @@
 
 #light.ServerMembers-headers {
 	color: #5c5e66;
+}
+
+#purple.ServerMembers-headers {
+	color: #fff;
 }
 
 h2 {
