--- a/react-app/src/components/DirectMessages/DMIndex/DMIndex.css
+++ b/react-app/src/components/DirectMessages/DMIndex/DMIndex.css
@@ -6,8 +6,13 @@
 	color: rgb(196, 122, 228);
 }
 
+.cms-friend-name {
+	width: 240px;
+}
+
 .cms-container.dms {
 	width: 100%;
+	/* width: calc(100% - 312px); */
 }
 
 .cm-form-container.dms {
@@ -15,8 +20,14 @@
 	width: 100%;
 }
 
-.mleft-10 {
-	margin-left: 10px;
+/* .mleft-10 {
+	padding-left: 10px;
+} */
+
+.dm-row {
+	width: 80%;
+	/* display: flex;
+	flex-direction: row; */
 }
 
 .dm-aka {
@@ -27,14 +38,23 @@
 }
 
 .overfl-wid {
-	width: auto;
+	width: calc(100% - 240px);
 	padding-left: 25px;
 	border-left: solid 1px rgba(0, 0, 0, 0.13);
-	overflow-x: hidden;
+	/* overflow-x: hidden; */
 	height: 20px;
+	box-sizing: border-box;
+	white-space: nowrap;
+    overflow: clip;
+	text-overflow: ellipsis;
 }
 
 .dm-names {
 	color: rgba(255, 255, 255, 0.507);
 	font-size: 14px;
+	padding-left: 10px;
+}
+
+#purple.dm-names {
+	color: #fff;
 }
