--- a/react-app/src/components/MainPage/ServerNav/ServerNav.css
+++ b/react-app/src/components/MainPage/ServerNav/ServerNav.css
@@ -63,6 +63,11 @@
   flex-shrink: 0;
 }
 
+#purple.ServerNav-icons,
+#purple.ServerNav-profile {
+  color: #7f73ba;
+}
+
 .ServerNav-profile {
   background-color: #5765f2;
 }
