--- a/react-app/src/components/OpenModalButton/OpenModalButton.css
+++ b/react-app/src/components/OpenModalButton/OpenModalButton.css
@@ -22,6 +22,10 @@
   color: #5e6772;
 }
 
+#purple.fa-solid.fa-plus.align-right {
+  color: #393065;
+}
+
 .Edit,
 .Delete {
   display: flex;
@@ -37,6 +41,10 @@
   display: flex;
   align-items: center;
   margin-left: 0;
+}
+
+#purple.Edit-Channel {
+  color: #dfdcee;
 }
 
 .DeleteChannel {
