--- a/react-app/src/components/Channels/Channel.css
+++ b/react-app/src/components/Channels/Channel.css
@@ -227,3 +227,8 @@ a.UserLanding-sidebar-channel-user-home {
 	margin-right: 3px;
 	cursor: pointer;
 }
+
+.mootro-only {
+	margin-left: -453px;
+}
+
